--- a/package.json
+++ b/package.json
@@ -1,15 +1,16 @@
 {
   "name": "electron-app",
   "version": "1.0.0",
-  "description": "",
+  "description": "electron app",
   "main": "main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "debug": "electron-forge start --inspect-electron",
     "start": "electron-forge start",
     "package": "electron-forge package",
     "make": "electron-forge make"
   },
-  "author": "",
+  "author": "mx",
   "license": "ISC",
   "devDependencies": {
     "@electron-forge/cli": "^6.0.0-beta.54",
