--- a/package.json
+++ b/package.json
@@ -21,7 +21,12 @@
     "electron": "^11.2.2"
   },
   "dependencies": {
-    "electron-squirrel-startup": "^1.0.0"
+    "electron-squirrel-startup": "^1.0.0",
+    "gulp": "^4.0.2",
+    "gulp-clean": "^0.4.0",
+    "gulp-clean-dir": "^1.0.2",
+    "gulp-gzip": "^1.4.2",
+    "gulp-sftp-up4": "^0.1.8"
   },
   "config": {
     "forge": {
